# rust-aws-lambda-example

./: Cargo.toml  Makefile  README.md
src/utils/: error.rs  mod.rs
